--- a/src/html/includes/uses-list.html
+++ b/src/html/includes/uses-list.html
@@ -1,12 +1,14 @@
 <div class="container-fluid">
     <ul class="row uses" >
         <% uses.forEach(function(item) { %>
-        <li class="col-md-4 uses-item">
-            <div class="uses-item__title">
-                <%-item.title%>
-            </div>
-            <div class="uses-item__image">
-                <img src='./img/<%-item.imageUrl%>'  alt="">
+        <li class="col-md-4">
+            <div class="uses-item">
+                <div class="uses-item__title">
+                    <%-item.title%>
+                </div>
+                <div class="uses-item__image">
+                    <img src='./img/<%-item.imageUrl%>'  alt="">
+                </div>
             </div>
         </li>
         <% }); %>  
