--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -4,27 +4,32 @@
     uses: [
         {
             title: 'Оконный профиль', 
+            description: 'При производстве стекла карбонатный наполнитель добавляют в шихту для: повышения температуры плавления шихты, снижая затраты на енергоносители; улучшения качества зеркальных стёкол при флоат-способе изготовления; повышения прозрачности; придания термоустойчивости',
             imageUrl: 'page-1_img01.jpg' 
         },
         {
             title: 'ПВХ изделия', 
+            description: 'При производстве стекла карбонатный наполнитель добавляют в шихту для: повышения температуры плавления шихты, снижая затраты на енергоносители; улучшения качества зеркальных стёкол при флоат-способе изготовления; повышения прозрачности; придания термоустойчивости', 
             imageUrl: 'page-1_img02.jpg' 
         },
         {
             title: 'Лакокрасочные изделия', 
+            description: 'При производстве стекла карбонатный наполнитель добавляют в шихту для: повышения температуры плавления шихты, снижая затраты на енергоносители; улучшения качества зеркальных стёкол при флоат-способе изготовления; повышения прозрачности; придания термоустойчивости',
             imageUrl: 'page-1_img07.jpg' 
         },
         {
             title: 'Бумага', 
+            description: 'При производстве стекла карбонатный наполнитель добавляют в шихту для: повышения температуры плавления шихты, снижая затраты на енергоносители; улучшения качества зеркальных стёкол при флоат-способе изготовления; повышения прозрачности; придания термоустойчивости',
             imageUrl: 'page-1_img08.jpg' 
         },
         {
             title: 'Герметики', 
+            description: 'При производстве стекла карбонатный наполнитель добавляют в шихту для: повышения температуры плавления шихты, снижая затраты на енергоносители; улучшения качества зеркальных стёкол при флоат-способе изготовления; повышения прозрачности; придания термоустойчивости',
             imageUrl: 'page-1_img10.jpg' 
         },
         {
             title: 'Компаунды', 
-            imageUrl: 'page-1_img12.jpg' 
+            description: 'При производстве стекла карбонатный наполнитель добавляют в шихту для: повышения температуры плавления шихты, снижая затраты на енергоносители; улучшения качества зеркальных стёкол при флоат-способе изготовления; повышения прозрачности; придания термоустойчивости',            imageUrl: 'page-1_img12.jpg' 
         }, 
     ], 
     points: [
