add intro section

--- a/src/html/includes/uses-list.html
+++ b/src/html/includes/uses-list.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
     <ul class="row uses" >
         <% uses.forEach(function(item) { %>
         <li class="col-md-4">
