--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -49,10 +49,11 @@
   }; %>
   <%= _.template(require('./../includes/header.html'))(data) %>
   
-  <div class="container">
-    Первая страница.
-  </div>
-  <%= _.template(require('./../includes/uses-list.html'))(data) %>
-  <%= _.template(require('./../includes/points.html'))(data) %>
+  <%= _.template(require('./../includes/intro.html'))(data)%>
+  <div class="container-fluid content">
+      <%= _.template(require('./../includes/uses-list.html'))(data) %>
+      <%= _.template(require('./../includes/points.html'))(data) %>
+    
+      <%= _.template(require('./../includes/footer.html'))(data) %>
 
-  <%= _.template(require('./../includes/footer.html'))(data) %>
+  </div>
