--- a/src/scss/uses.scss
+++ b/src/scss/uses.scss
@@ -29,7 +29,7 @@
         color: #fff;
         text-transform: uppercase;
         font-weight: 700;
-        padding: 10px 40px 40px 48px;
+        padding: 10px 40px 20px 48px;
         &:before {
             content: '';
             position: absolute;
@@ -47,7 +47,7 @@
         padding: 0 40px;
         font-size: 12px;
         opacity: 0;
-        transition: top 1.2s, opacity  0.2s;
+        transition: top ease-in-out 1.2s, opacity  0.2s;
     }
 
     &__image {
@@ -67,7 +67,7 @@
         top: 40px;
     }
     &:hover &__description {
-        top: 120px;
+        top: 92px;
         opacity: 1;
     }
 
