--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1,6 +1,10 @@
 <% var data = {
     title: "Заголовок | Проект",
-    author: "Harrix",
+    about: {
+        title: 'Camelot chemie',
+        tagline: 'предлагает широкий спектр карбонатных наполнителей',
+        text: 'Благодаря уникальным физико-химическим показателям карбонатный наполнитель - высоко востребованный карбонатный наполнитель, наибьолее экологичный материал. Он химически нейтрален, не горюч и имеет низкие показатели водопоглощения. '
+    },
     products: [
         {
             title: 'Оконный профиль', 
@@ -12,7 +16,7 @@
             description: 'При производстве стекла карбонатный наполнитель добавляют в шихту для: повышения температуры плавления шихты, снижая затраты на енергоносители; улучшения качества зеркальных стёкол при флоат-способе изготовления; повышения прозрачности; придания термоустойчивости', 
             imageUrl: 'page-1_img02.jpg' 
         }
-    ],
+    ], 
     uses: [
         {
             title: 'Оконный профиль', 
@@ -65,13 +69,16 @@
   <div class="container-fluid content">
       <%= _.template(require('./../includes/points.html'))(data) %>
       <div class="container">
-          <h2>Наша продлукция</h2>
+          <h2 class="secion-title">Наша продукция</h2>
           <div class="row">
               <div class="col-md-8">
                     <%= _.template(require('./../includes/products-list.html'))(data) %>
               </div>
               <div class="col-md-4">
                   О компании
+                  <p>
+                        <%-data.about.text%>
+                  </p>
               </div>
           </div>
       </div>
