--- a/src/html/includes/products-list.html
+++ b/src/html/includes/products-list.html
@@ -1,15 +1,15 @@
-<ul class="row uses" >
+<ul class="row products" >
     <% products.forEach(function(item) { %>
     <li class="col-md-6">
-        <div class="uses-item">
-            <div class="uses-item__image">
+        <div class="product thumb">
+            <div class="thumb__image">
                 <img src='./img/<%-item.imageUrl%>'  alt="">
             </div>
-            <div class="uses-item__text">
-                <div class="uses-item__title">
+            <div class="thumb__text">
+                <div class="thumb__title">
                     <%-item.title%>
                 </div>
-                <div class="uses-item__description">
+                <div class="thumb__description">
                     <%-item.description%>
                 </div>
             </div>
@@ -17,4 +17,4 @@
         </div>
     </li>
     <% }); %>  
-    </ul>
+</ul>
