--- a/src/html/includes/uses-list.html
+++ b/src/html/includes/uses-list.html
@@ -1,16 +1,19 @@
 <div class="container">
+    <h2 class="secion-title">
+        Области применения в производстве
+    </h2>   
     <ul class="row uses" >
         <% uses.forEach(function(item) { %>
-        <li class="col-md-4">
-            <div class="uses-item">
-                <div class="uses-item__image">
+        <li class="col-md-4 col-sm-6">
+            <div class="uses-item thumb">
+                <div class="thumb__image">
                     <img src='./img/<%-item.imageUrl%>'  alt="">
                 </div>
-                <div class="uses-item__text">
-                    <div class="uses-item__title">
+                <div class="thumb__text">
+                    <div class="thumb__title">
                         <%-item.title%>
                     </div>
-                    <div class="uses-item__description">
+                    <div class="thumb__description">
                         <%-item.description%>
                     </div>
                 </div>
