--- a/src/scss/intro.scss
+++ b/src/scss/intro.scss
@@ -1,5 +1,5 @@
 .intro {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: relative;
     &__bg {
@@ -17,7 +17,7 @@
     }
     &__title {
         font-size: 48px;
-        color: #ffffff;
+        color: white;
         text-align: center;
         text-transform: uppercase;
         font-weight: bold;
