--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,15 +1,5 @@
-@import "~bootstrap/scss/bootstrap";
-@import "./vars.scss";
+// @import "~bootstrap/scss/bootstrap";
+@import "./common.scss";
 @import "./intro.scss";
 @import "./points.scss";
 @import "./uses.scss";
-
-// $bg-color: pink;
-
-body {
-//  background: $bg-color;
-}
-.content {
-    background: #ffffff;
-    padding: 80px 0
-}
